[ui] Fix visible button text over icon

--- a/ui/Frontend/public/css/kanopya_style.css
+++ b/ui/Frontend/public/css/kanopya_style.css
@@ -182,7 +182,7 @@ button.ui-multiselect,.ui-multiselect-menu li label{cursor:pointer;}
 
 #button-cancel .ui-button-text,
 #button-ok .ui-button-text, 
-#button-back .ui-button-text{text-indent:-9999999em;width:20px;height:20px;background-clip:content-box;background-repeat:no-repeat;padding:5px;}
+#button-back .ui-button-text{text-indent:-999999em;width:20px;height:20px;background-clip:content-box;background-repeat:no-repeat;padding:5px;}
 #button-cancel .ui-button-text{background-image:url('/images/kanopya-sprites.png');background-position:-135px -15px;}
 #button-cancel.ui-state-hover .ui-button-text{background-position:-135px -35px;}
 #button-ok .ui-button-text{background-image:url('/images/kanopya-sprites.png');background-position:-95px -15px;}
@@ -195,13 +195,13 @@ button.ui-multiselect,.ui-multiselect-menu li label{cursor:pointer;}
 .ui-jqdialog .ui-jqdialog-titlebar{margin: -10px -10px 0;padding: 10px 10px 0;}
 .ui-jqdialog .ui-jqdialog-titlebar-close{height: 20px;margin: -7px 0 0;right: 10px !important;width: 20px;background:none!important;border:none!important;}
 
-#sync-ucs .ui-button-text,#edit-ucs .ui-button-text{text-indent:-9999999em;width:16px;height:16px;background-clip:content-box;padding:3px;}
+#sync-ucs .ui-button-text,#edit-ucs .ui-button-text{text-indent:-999999em;width:16px;height:16px;background-clip:content-box;padding:3px;}
 #sync-ucs.ui-widget .ui-icon,#edit-ucs.ui-widget .ui-icon{left:3px;margin-top:-8px;cursor:pointer!important;}
 #users_list .ui-pg-div{background:none!important;border:none!important;}
 #users_list .ui-state-hover{margin-left:5px!important;}
 
 .DelButton,.ui-dialog-buttonset{padding-top:2px!important;}
-.DelButton .fm-button{text-indent:-9999999em;background-clip:content-box;padding:0px;height:20px;width:20px;}
+.DelButton .fm-button{text-indent:-999999em;background-clip:content-box;padding:0px;height:20px;width:20px;}
 .DelButton .fm-button span{margin:-7px 0 0;padding:0;}
 
 .ui-icon-arrowthickstop-1-n{background-position:-122px -80px;}
